# rcli

./: Cargo.toml  README.md  deny.toml  test.rest
src/: lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_server.rs  mod.rs  text.rs
